--- a/02_IntroductionToDjango/board/advertisements/templates/advertisements/advertisement_detail_1.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisements/advertisement_detail_1.html
@@ -10,6 +10,6 @@
      width="150" height="150" alt="фото курса">
 <a href='https://skillbox.ru/course/python-basic/'>Ссылка на курс</a>
 <p>111 руб. за все задания.</p>
-<a href='http://localhost:8000/advertisements/'>Вернуться к списку курсов</a>
+<a href="{% url 'advertisement_list' %}">Вернуться к списку курсов</a>
 </body>
 </html>
