--- a/02_IntroductionToDjango/board/advertisements/templates/advertisements/advertisement_list.html
+++ b/02_IntroductionToDjango/board/advertisements/templates/advertisements/advertisement_list.html
@@ -8,11 +8,11 @@
 <h1>Прошел все курсы на SkillBox. </h1>
 <h2>Продаю готовые домашние задания.</h2>
 <ul>
-<li><a href='http://localhost:8000/advertisements/1/'>1. Python Basic</a></li>
-<li><a href='http://localhost:8000/advertisements/2/'>2. Java-разработчик.</a></li>
-<li><a href='http://localhost:8000/advertisements/3/'>3. Веб-разработчик с нуля до PRO.</a></li>
-<li><a href='http://localhost:8000/advertisements/4/'>4. Сторителлинг.</a></li>
-<li><a href='http://localhost:8000/advertisements/5/'>5. Философия искусственного интеллекта.</a></li>
+<li><a href="{% url 'advertisement_detail_1' %}">1. Python Basic</a></li>
+<li><a href="{% url 'advertisement_detail_2' %}">2. Java-разработчик.</a></li>
+<li><a href="{% url 'advertisement_detail_3' %}">3. Веб-разработчик с нуля до PRO.</a></li>
+<li><a href="{% url 'advertisement_detail_4' %}">4. Сторителлинг.</a></li>
+<li><a href="{% url 'advertisement_detail_5' %}">5. Философия искусственного интеллекта.</a></li>
 </ul>
 </body>
 </html>
