--- a/05_Forms/news/app_news/templates/app_news/edit.html
+++ b/05_Forms/news/app_news/templates/app_news/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Редактирование</h2>
-<form method="post" action="/create/{{ new_id }}/edit/">
+<form method="post" action="{% url 'edit' new_id=new_id %}">
     {% csrf_token %}
     {{ new_form.as_p }}
     <button type="submit">Сохранить</button>
