--- a/05_Forms/news/app_news/templates/app_news/new_update_form.html
+++ b/05_Forms/news/app_news/templates/app_news/new_update_form.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h2>Редактирование</h2>
-<form method="post" action="{% url 'edit' new_id=new_id %}">
+<form method="post">
     {% csrf_token %}
-    {{ new_form.as_p }}
+    {{ form.as_p }}
     <button type="submit">Сохранить</button>
 </form>
 </body>
