--- a/09_Files/djfiles/app_users/templates/users/user_detail.html
+++ b/09_Files/djfiles/app_users/templates/users/user_detail.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>{{object.username}}</title>
-</head>
-<body>
-<h2>Аккаунт</h2>
-<h4>пользователь: {{object.username}}</h4>
-<p>имя: {{object.first_name}}</p>
-<p>фамилия: {{object.last_name}}</p>
-<p>о себе: {{object.profile.about}}</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}{{object.username}}{% endblock %}
+
+{% block content %}
+<h2>{% trans "Account" %}</h2>
+<h4>{% trans "user" %}: {{object.username}}</h4>
+<p>{% trans "first name" %}: {{object.first_name}}</p>
+<p>{% trans "last name" %}: {{object.last_name}}</p>
+<p>{% trans "about" %}: {{object.profile.about}}</p>
+{% endblock %}
