--- a/09_Files/djfiles/app_notes/templates/app_notes/upload_notes.html
+++ b/09_Files/djfiles/app_notes/templates/app_notes/upload_notes.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Загрузка файла</title>
-</head>
-<body>
-<h2>Загрузка файла с заметками</h2>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}{% trans "upload file" %}{% endblock %}
+
+{% block content %}
+<h2>{% trans "upload file with notes" %}</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Загрузить файл</button>
+    <button type="submit">{% trans "upload file" %}</button>
 </form>
-</body>
-</html>
+{% endblock %}
