--- a/09_Files/djfiles/app_users/templates/users/login.html
+++ b/09_Files/djfiles/app_users/templates/users/login.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>логин</title>
-</head>
-<body>
-<h2>Страница входа</h2>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}{% trans "login" %}{% endblock %}
+
+{% block content %}
+<h2>{% trans "Login page" %}</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button type="submit">{% trans "login" %}</button>
 </form>
-</body>
-</html>
+{% endblock %}
