--- a/09_Files/djfiles/app_users/templates/users/register.html
+++ b/09_Files/djfiles/app_users/templates/users/register.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Регистрация</title>
-</head>
-<body>
-<h2>Регистрация</h2>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}{% trans "registration" %}{% endblock %}
+
+{% block content %}
+<h2>{% trans "Registration" %}</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Sign up</button>
+    <button type="submit">{% trans "Sign up" %}</button>
 </form>
-</body>
-</html>
+{% endblock %}
