--- a/15_DatabasesAdvanced/djmarketplace/app_goods/templates/app_goods/item_detail.html
+++ b/15_DatabasesAdvanced/djmarketplace/app_goods/templates/app_goods/item_detail.html
@@ -11,10 +11,9 @@
 <p>Цена: {{ item.price }}</p>
 <form method="post" action="{% url 'item_detail' pk=item.pk %}">
     {% csrf_token %}
-<!--    {{ new_comment.as_p }}-->
     <button type="submit">Добавить в корзину</button>
 </form>
 <!--<button type="button">Добавить в корзину</button>-->
-<a href="{% url 'items' %}">Вернуться к товарам</a>
+<a href="{% url 'items' %}">вернуться к товарам</a>
 </body>
 </html>
