--- a/15_DatabasesAdvanced/djmarketplace/app_users/templates/users/balance_form.html
+++ b/15_DatabasesAdvanced/djmarketplace/app_users/templates/users/balance_form.html
@@ -12,5 +12,6 @@
     {{ form.as_p }}
     <button type="submit">Пополнить</button>
 </form>
+<a href="{% url 'account' pk=request.user.pk %}">вернуться в личный кабинет</a>
 </body>
 </html>
