--- a/15_DatabasesAdvanced/djmarketplace/app_users/templates/users/user_detail.html
+++ b/15_DatabasesAdvanced/djmarketplace/app_users/templates/users/user_detail.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>{{object.username}}</title>
+    <title>личный кабинет: {{object.username}}</title>
 </head>
 <body>
-<h2>Аккаунт</h2>
+<h2>Личный кабинет</h2>
 <h4>пользователь: {{object.username}}</h4>
 <p>имя: {{object.first_name}}</p>
 <p>баланс: {{object.profile.balance}}</p>
@@ -13,5 +13,7 @@
 <a href="{% url 'add_balance' pk=object.pk %}">пополнить баланс</a>
 <br>
 <a href="{% url 'cart' pk=object.pk %}">перейти в корзину</a>
+<br>
+<a href="{% url 'items' %}">вернуться к товарам</a>
 </body>
 </html>
